syntax = "proto3";

package guiltmachine.v1;

option go_package = "guiltmachine/backend/internal/proto/gen/v1;v1";

import "google/protobuf/timestamp.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string email = 1;
  string password_hash = 2;
}

message CreateUserResponse {
  string id = 1;
  string email = 2;
  google.protobuf.Timestamp created_at = 3;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string id = 1;
  string email = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}
